--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,33 @@
 {
   "manifest_version": 2,
-
   "name": "scroll2message",
   "description": "Scrolls to a pre-selected message, perfect for those really long conversations",
   "version": "1.0",
-
   "browser_action": {
     "default_icon": "scroll.png",
     "default_popup": "popup.html"
   },
-
   "content_scripts": [
-      {
-        "matches": ["https://app.couple.me/*"],
-        "js": ["content_script.js"]
-      }
-    ],
-
+    {
+      "matches": [
+        "https://app.couple.me/*"
+      ],
+      "js": [
+        "content_script.js"
+      ]
+    }
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
   "permissions": [
     "tabs",
     "contextMenus",
     "activeTab"
-  ]
+  ],
+  "icons": {
+    "16": "scroll-16.png"
+  }
 }
